# my_gpui_app

./: .gitignore  AGENTS.md  Cargo.toml
src/: error.rs  main.rs
src/app/: app_state.rs  app_view.rs  mod.rs
src/components/: icons.rs  sidebar.rs
src/config/: mod.rs
src/db/: models.rs  repository.rs  schema.sql
