[package]
name = "my_gpui_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
